reports/stage_reports/Diagramscene_ultima-syz/20251226_054658/tests_report.txt
[stage] tests
[project] C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[time] 20251226_054658
[meta] cmd: cmd /c "set PATH=D:\Qt\6.10.1\mingw_64\bin;D:\Qt\Tools\mingw1310_64\bin;%PATH% && cd tests\generated && qmake tests.pro && mingw32-make && debug\test_generated.exe"
[meta] cwd: C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[meta] returncode: 2
[meta] timed_out: False
[meta] timeout_s: 600.0

== findings ==
- tests | error | 测试命令执行失败

== stdout (truncated) ==
mingw32-make -f Makefile.Release
mingw32-make[1]: Entering directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
g++ -fno-keep-inline-dllexport -O2 -Wall -Wextra -Wextra -dM -E -o release\moc_predefs.h D:\Qt\6.10.1\mingw_64\mkspecs\features\data\dummy.cpp
D:\Qt\6.10.1\mingw_64\bin\moc.exe -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" --include C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated/release/moc_predefs.h -ID:/Qt/6.10.1/mingw_64/mkspecs/win32-g++ -IC:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated -IC:/Users/lenovo/Desktop/Diagramscene_ultima-syz -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++ -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/x86_64-w64-mingw32 -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/backward -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include-fixed -ID:/Qt/Tools/mingw1310_64/x86_64-w64-mingw32/include test_arrow.cpp -o release\test_arrow.moc
g++ -c -fno-keep-inline-dllexport -O2 -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" -I. -I../.. -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -Irelease -I/include -ID:/Qt/6.10.1/mingw_64/mkspecs/win32-g++  -o release\test_arrow.o test_arrow.cpp
mingw32-make[1]: Leaving directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'

== stderr (truncated) ==
test_arrow.cpp: In member function 'void TestArrow::initTestCase()':
test_arrow.cpp:27:50: error: no matching function for call to 'DiagramItem::DiagramItem(DiagramItem::DiagramType)'
   27 |     startItem = new DiagramItem(DiagramItem::Step);
      |                                                  ^
In file included from test_arrow.cpp:4:
../../diagramitem.h:49:5: note: candidate: 'DiagramItem::DiagramItem(DiagramType, QMenu*, QGraphicsItem*)'
   49 |     DiagramItem(DiagramType diagramType, QMenu *contextMenu, QGraphicsItem *parent = nullptr);
      |     ^~~~~~~~~~~
../../diagramitem.h:49:5: note:   candidate expects 3 arguments, 1 provided
test_arrow.cpp:28:48: error: no matching function for call to 'DiagramItem::DiagramItem(DiagramItem::DiagramType)'
   28 |     endItem = new DiagramItem(DiagramItem::Step);
      |                                                ^
../../diagramitem.h:49:5: note: candidate: 'DiagramItem::DiagramItem(DiagramType, QMenu*, QGraphicsItem*)'
   49 |     DiagramItem(DiagramType diagramType, QMenu *contextMenu, QGraphicsItem *parent = nullptr);
      |     ^~~~~~~~~~~
../../diagramitem.h:49:5: note:   candidate expects 3 arguments, 1 provided
In file included from D:/Qt/6.10.1/mingw_64/include/QtTest/qtesteventloop.h:8,
                 from D:/Qt/6.10.1/mingw_64/include/QtTest/qsignalspy.h:10,
                 from D:/Qt/6.10.1/mingw_64/include/QtTest/QtTest:10,
                 from test_arrow.cpp:1:
test_arrow.cpp: In member function 'void TestArrow::testConstructor()':
test_arrow.cpp:44:21: error: 'DiagramItem* Arrow::myStartItem' is private within this context
   44 |     QCOMPARE(arrow->myStartItem, startItem);
      |                     ^~~~~~~~~~~
D:/Qt/6.10.1/mingw_64/include/QtTest/qtestcase.h:90:26: note: in definition of macro 'QCOMPARE'
   90 |     if (!QTest::qCompare(actual, expected, #actual, #expected, __FILE__, __LINE__))\
      |                          ^~~~~~
In file included from test_arrow.cpp:3:
../../arrow.h:34:18: note: declared private here
   34 |     DiagramItem *myStartItem;
      |                  ^~~~~~~~~~~
test_arrow.cpp:44:21: note: field 'DiagramItem* Arrow::myStartItem' can be accessed via 'DiagramItem* Arrow::startItem() const'
   44 |     QCOMPARE(arrow->myStartItem, startItem);
      |                     ^~~~~~~~~~~
D:/Qt/6.10.1/mingw_64/include/QtTest/qtestcase.h:90:26: note: in definition of macro 'QCOMPARE'
   90 |     if (!QTest::qCompare(actual, expected, #actual, #expected, __FILE__, __LINE__))\
      |                          ^~~~~~
test_arrow.cpp:45:21: error: 'DiagramItem* Arrow::myEndItem' is private within this context
   45 |     QCOMPARE(arrow->myEndItem, endItem);
      |                     ^~~~~~~~~
D:/Qt/6.10.1/mingw_64/include/QtTest/qtestcase.h:90:26: note: in definition of macro 'QCOMPARE'
   90 |     if (!QTest::qCompare(actual, expected, #actual, #expected, __FILE__, __LINE__))\
      |                          ^~~~~~
../../arrow.h:35:18: note: declared private here
   35 |     DiagramItem *myEndItem;
      |                  ^~~~~~~~~
test_arrow.cpp:45:21: note: field 'DiagramItem* Arrow::myEndItem' can be accessed via 'DiagramItem* Arrow::endItem() const'
   45 |     QCOMPARE(arrow->myEndItem, endItem);
      |                     ^~~~~~~~~
D:/Qt/6.10.1/mingw_64/include/QtTest/qtestcase.h:90:26: note: in definition of macro 'QCOMPARE'
   90 |     if (!QTest::qCompare(actual, expected, #actual, #expected, __FILE__, __LINE__))\
      |                          ^~~~~~
test_arrow.cpp: In member function 'void TestArrow::testPaint()':
test_arrow.cpp:78:21: error: variable 'QPainter painter' has initializer but incomplete type
   78 |     QPainter painter(&image);
      |                     ^
mingw32-make[1]: *** [Makefile.Release:989: release/test_arrow.o] Error 1
mingw32-make: *** [Makefile:45: release] Error 2
